{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 109,
  "lineage": "fac43e16-7999-bc2f-63d9-704bf3a59e79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:internet-gateway/igw-0716ecb1323883a5b",
            "id": "igw-0716ecb1323883a5b",
            "owner_id": "742846646501",
            "tags": {
              "Name": "more-tf-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-igw",
              "Project": "more.tf"
            },
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:route-table/rtb-020951154cfd8fc5d",
            "id": "rtb-020951154cfd8fc5d",
            "owner_id": "742846646501",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0716ecb1323883a5b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "more-tf-private-rt-temp"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-private-rt-temp",
              "Project": "more.tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:route-table/rtb-023deaa28fa704273",
            "id": "rtb-023deaa28fa704273",
            "owner_id": "742846646501",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0716ecb1323883a5b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "more-tf-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-public-rt",
              "Project": "more.tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b33955593e0c98e4",
            "route_table_id": "rtb-020951154cfd8fc5d",
            "subnet_id": "subnet-0cd40f377d6fbb766"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0759583994246144b",
            "route_table_id": "rtb-020951154cfd8fc5d",
            "subnet_id": "subnet-0d485c43aad574e90"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016cf462051868cba",
            "route_table_id": "rtb-023deaa28fa704273",
            "subnet_id": "subnet-0f82232e2999e5394"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050c6ce261e3dd6bc",
            "route_table_id": "rtb-023deaa28fa704273",
            "subnet_id": "subnet-039cdb0211fe4522e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:security-group/sg-0d32e4e98b8a8da9c",
            "description": "Security group for ECS EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d32e4e98b8a8da9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic for ECS tasks",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "more-tf-ecs-instance-sg",
            "name_prefix": "",
            "owner_id": "742846646501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "more-tf-ecs-instance-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-ecs-instance-sg",
              "Project": "more.tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:security-group/sg-0a8fc7a59fd8ebb62",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8fc7a59fd8ebb62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "more-tf-ecs-task-sg",
            "name_prefix": "",
            "owner_id": "742846646501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "more-tf-ecs-task-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-ecs-task-sg",
              "Project": "more.tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:security-group/sg-016ee4cb2391f1841",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016ee4cb2391f1841",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Temporary public access for database migration and setup",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS tasks",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a8fc7a59fd8ebb62",
                  "sg-0d32e4e98b8a8da9c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "more-tf-rds-sg",
            "name_prefix": "",
            "owner_id": "742846646501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "more-tf-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-rds-sg",
              "Project": "more.tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_instance",
            "aws_security_group.ecs_task",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:security-group/sg-000480add65cfc281",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000480add65cfc281",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS tasks",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a8fc7a59fd8ebb62",
                  "sg-0d32e4e98b8a8da9c"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "more-tf-redis-sg",
            "name_prefix": "",
            "owner_id": "742846646501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "more-tf-redis-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-redis-sg",
              "Project": "more.tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_instance",
            "aws_security_group.ecs_task",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:subnet/subnet-0cd40f377d6fbb766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd40f377d6fbb766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742846646501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "more-tf-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-private-subnet-1",
              "Project": "more.tf",
              "Type": "Private"
            },
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:subnet/subnet-0d485c43aad574e90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d485c43aad574e90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742846646501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "more-tf-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-private-subnet-2",
              "Project": "more.tf",
              "Type": "Private"
            },
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:subnet/subnet-0f82232e2999e5394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f82232e2999e5394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "742846646501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "more-tf-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-public-subnet-1",
              "Project": "more.tf",
              "Type": "Public"
            },
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:subnet/subnet-039cdb0211fe4522e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039cdb0211fe4522e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "742846646501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "more-tf-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-public-subnet-2",
              "Project": "more.tf",
              "Type": "Public"
            },
            "vpc_id": "vpc-0c269ea3c3b8fb417"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:742846646501:vpc/vpc-0c269ea3c3b8fb417",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088021f80ed070a5d",
            "default_route_table_id": "rtb-01b2367ebf26bafcb",
            "default_security_group_id": "sg-0780ad10e811e62e7",
            "dhcp_options_id": "dopt-023c87cabb44c153f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c269ea3c3b8fb417",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b2367ebf26bafcb",
            "owner_id": "742846646501",
            "tags": {
              "Name": "more-tf-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "more-tf-vpc",
              "Project": "more.tf"
            }
          }
        }
      ]
    }
  ]
}